<resources>
    <string name="app_name">Gaia</string>
    <string name="title_tree">Tree</string>
    <string name="title_task">Tasks</string>
    <string name="title_friend">Friends</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="img">img</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="remember_me">Remember me!</string>
    <string name="new_account">New Account?</string>
    <string name="progress_text">%1$d/100</string>
    <string name="title_account">Account</string>
    <string name="add_task_button">Add task button</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="accept">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name_friend_request">Name friend request</string>
    <string name="registerMayus">REGISTER</string>
    <string name="taskName">Task name</string>
    <string name="addTask">Add task</string>
</resources>