<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".framework.login.LoginFragment"
    android:background="@color/background">



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/img"
        android:scaleType="fitCenter"
        android:src="@drawable/arbol_login_ico"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/myBlack"
        app:layout_constraintBottom_toTopOf="@+id/passText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_first"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="274dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/myBlack"
        app:layout_constraintBottom_toTopOf="@id/horizontal_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameText"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="364dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8632011" />

    <com.google.android.material.button.MaterialButton
        app:cornerRadius="20dp"
        android:id="@+id/loginButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/myBlack"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_third"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_second" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/remember_me"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/newAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_account"
        android:textColor="@color/myBlack"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_third"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_third" />


    <com.google.android.material.button.MaterialButton
        app:cornerRadius="20dp"
        android:id="@+id/registerButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Register here!"
        android:textAllCaps="false"
        android:textColor="@color/myBlack"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_third" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="2dp"
        android:indeterminateTint="#0088FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>