<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/end_ca"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/addTaskTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addTask"
        android:textSize="25sp"
        android:textColor="@color/black"

        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/titleTIL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleTIL"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintTop_toBottomOf="@+id/addTaskTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linearLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/taskName" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:layout_constraintTop_toBottomOf="@id/titleTIL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/save">

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_gravity="center"
            android:scaleY="0.7"
            android:scaleX="0.7"
            android:layout_marginLeft="-30dp"
            android:layout_marginRight="-30dp"
            />
        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:layout_gravity="center"
            android:scaleY="0.7"
            android:scaleX="0.7"
            android:layout_marginLeft="-30dp"
            android:layout_marginRight="-30dp"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        app:cornerRadius="20dp"
        android:id="@+id/save"
        android:layout_gravity="center"
        android:text="@string/accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="#709eb8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintEnd_toStartOf="@id/cancelButton"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        app:cornerRadius="20dp"
        android:id="@+id/cancelButton"
        android:layout_gravity="center"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#06202e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/save" />


</androidx.constraintlayout.widget.ConstraintLayout>
